--- a/SistemaCampeonatoFutbol/fron-end/index.html
+++ b/SistemaCampeonatoFutbol/fron-end/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Redirección con botón</title>
   </head>
-  <body></body>
+  <body>
+    <a href="hola.html"> <button id="click">click</button></a>
+  </body>
 </html>
