--- a/SistemaCampeonatoFutbol/fron-end/index.html
+++ b/SistemaCampeonatoFutbol/fron-end/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Redirección con botón</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
   </head>
-  <body>
-    <a href="hola.html"> <button id="click">click</button></a>
-  </body>
+  <body></body>
 </html>
