--- a/SistemaCampeonatoFutbol/fron-end/index.html
+++ b/SistemaCampeonatoFutbol/fron-end/index.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Sistema de Gestión de Campeonatos</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Sistema de Gestión de Campeonatos de Fútbol</h1>
+    </header>
+    <main>
+      <!-- Aquí se mostrarán las diferentes secciones y funcionalidades -->
+    </main>
+    <footer>
+      <p>&copy; 2023 Sistema de Gestión de Campeonatos de Fútbol</p>
+    </footer>
+  </body>
 </html>
