--- a/SistemaCampeonatoFutbol/fron-end/index.html
+++ b/SistemaCampeonatoFutbol/fron-end/index.html
@@ -15,23 +15,37 @@
       .jumbotron {
         background-color: #343a40;
         color: white;
+        padding: 3rem;
+      }
+      .btn-custom {
+        background-color: #dc3545;
+        border-color: #dc3545;
+      }
+      .btn-custom:hover {
+        background-color: #c82333;
+        border-color: #bd2130;
+      }
+      footer {
+        margin-top: 3rem;
+        color: #666;
       }
     </style>
   </head>
   <body>
     <div class="container mt-5">
       <div class="jumbotron text-center">
-        <h1 class="display-4">Crear Campeonato de Fútbol</h1>
+        <h1 class="display-4">¡Crea tu Campeonato de Fútbol!</h1>
         <p class="lead">
-          ¡Crea tu propio campeonato de fútbol y organiza partidos emocionantes!
+          Organiza partidos emocionantes y vive la pasión del fútbol con nuestro
+          sistema de gestión.
         </p>
-        <a href="login.html" class="btn btn-primary btn-lg">Crear Campeonato</a>
+        <a href="login.html" class="btn btn-primary btn-lg btn-custom"
+          >Crear Campeonato</a
+        >
       </div>
-      <div class="text-center">
-        <footer>
-          <p>&copy; 2023 Sistema de Gestión de Campeonatos de Fútbol</p>
-        </footer>
-      </div>
+      <footer class="text-center">
+        <p>&copy; 2023 Sistema de Gestión de Campeonatos de Fútbol</p>
+      </footer>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
