--- a/SistemaCampeonatoFutbol/fron-end/registro.html
+++ b/SistemaCampeonatoFutbol/fron-end/registro.html
@@ -12,46 +12,61 @@
   </head>
   <body>
     <div class="container mt-5">
-      <div>
-        <div class="card-body">
-          <h2 class="card-title text-center">Registro</h2>
-          <form id="form-registro">
-            <div class="mb-3">
-              <label for="username" class="form-label">Nombre de usuario</label>
-              <input
-                type="text"
-                class="form-control"
-                id="id-username"
-                name="username"
-                required
-              />
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title text-center">Registro</h2>
+              <form id="form-registro">
+                <div class="mb-3">
+                  <label for="username" class="form-label"
+                    >Nombre de usuario</label
+                  >
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="id-username"
+                    name="username"
+                    placeholder="Nombre de usuario"
+                    required
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label"
+                    >Correo electrónico</label
+                  >
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="id-email"
+                    name="email"
+                    placeholder="example@gmail.com"
+                    required
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="password" class="form-label">Contraseña</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="id-password"
+                    name="password"
+                    placeholder="Contraseña"
+                    required
+                  />
+                </div>
+                <div class="d-grid">
+                  <button type="submit" class="btn btn-primary">
+                    Registrarse
+                  </button>
+                </div>
+                <p id="mensaje-error" class="text-danger mt-2"></p>
+              </form>
+              <p>
+                Ya tienes una cuenta? <a href="login.html">Inicia sesión</a>
+              </p>
             </div>
-            <div class="mb-3">
-              <label for="email" class="form-label">Correo electrónico</label>
-              <input
-                type="email"
-                class="form-control"
-                id="id-email"
-                name="email"
-                required
-              />
-            </div>
-            <div class="mb-3">
-              <label for="password" class="form-label">Contraseña</label>
-              <input
-                type="password"
-                class="form-control"
-                id="id-password"
-                name="password"
-                required
-              />
-            </div>
-            <div class="d-grid">
-              <button type="submit" class="btn btn-primary">Registrarse</button>
-            </div>
-            <p id="mensaje-error" class="text-danger mt-2"></p>
-          </form>
-          <p>Ya tienes una cuenta? <a href="login.html">Inicia sesión</a></p>
+          </div>
         </div>
       </div>
     </div>
