--- a/SistemaCampeonatoFutbol/fron-end/login.html
+++ b/SistemaCampeonatoFutbol/fron-end/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Iniciar Sesión</title>
+    <link rel="stylesheet" href="css/login.css" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -51,6 +52,11 @@
               <p class="text-center mt-3">
                 ¿No tienes una cuenta? <a href="registro.html">Regístrate</a>
               </p>
+              <div class="text-center mt-3">
+                <a href="index.html" class="btn btn-secondary"
+                  >Ir a la Página Principal</a
+                >
+              </div>
             </div>
           </div>
         </div>
