--- a/SistemaCampeonatoFutbol/fron-end/registro.html
+++ b/SistemaCampeonatoFutbol/fron-end/registro.html
@@ -62,8 +62,11 @@
                 </div>
                 <p id="mensaje-error" class="text-danger mt-2"></p>
               </form>
-              <p>
+              <p class="text-center mb-3">
                 Ya tienes una cuenta? <a href="login.html">Inicia sesión</a>
+              </p>
+              <p class="text-center mb-3">
+                Ya tienes una cuenta? <a href="index.html">Inicio</a>
               </p>
             </div>
           </div>
