--- a/SistemaCampeonatoFutbol/fron-end/login.html
+++ b/SistemaCampeonatoFutbol/fron-end/login.html
@@ -53,7 +53,7 @@
                 ¿No tienes una cuenta? <a href="registro.html">Regístrate</a>
               </p>
               <div class="text-center mt-3">
-                <a href="index.html" class="btn btn-secondary"
+                <a href="pag-principal.html" class="btn btn-secondary"
                   >Ir a la Página Principal</a
                 >
               </div>
