--- a/SistemaCampeonatoFutbol/fron-end/registro.html
+++ b/SistemaCampeonatoFutbol/fron-end/registro.html
@@ -66,7 +66,7 @@
                 Ya tienes una cuenta? <a href="login.html">Inicia sesión</a>
               </p>
               <p class="text-center mb-3">
-                Ya tienes una cuenta? <a href="index.html">Inicio</a>
+                Ya tienes una cuenta? <a href="login.html">Login</a>
               </p>
             </div>
           </div>
