--- a/SistemaCampeonatoFutbol/fron-end/html/pag-principal.html
+++ b/SistemaCampeonatoFutbol/fron-end/html/pag-principal.html
@@ -8,30 +8,41 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-    <style>
-      body {
-        background-color: #f8f9fa;
-      }
-      .jumbotron {
-        background-color: #343a40;
-        color: white;
-        padding: 3rem;
-      }
-      .btn-custom {
-        background-color: #dc3545;
-        border-color: #dc3545;
-      }
-      .btn-custom:hover {
-        background-color: #c82333;
-        border-color: #bd2130;
-      }
-      footer {
-        margin-top: 3rem;
-        color: #666;
-      }
-    </style>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">Bienvenido</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Acerca de</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <div class="container mt-5">
       <div class="jumbotron text-center">
         <h1 class="display-4">¡Crea tu Campeonato de Fútbol!</h1>
@@ -49,7 +60,7 @@
         </button>
       </div>
       <footer class="text-center">
-        <p>&copy; 2023 Sistema de Gestión de Campeonatos de Fútbol</p>
+        <p>&copy; Created By Gabriel, Victor</p>
       </footer>
     </div>
 
@@ -95,5 +106,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="../js/login.js"></script>
   </body>
 </html>
