--- a/SistemaCampeonatoFutbol/fron-end/html/index.html
+++ b/SistemaCampeonatoFutbol/fron-end/html/index.html
@@ -102,7 +102,7 @@
         </div>
       </div>
     </div>
-    <script src="../js/index.js"></script>
+    <script src="/GestionCampeonato/SistemaCampeonatoFutbol/src/repository/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
