--- a/SistemaCampeonatoFutbol/fron-end/html/pag-principal.html
+++ b/SistemaCampeonatoFutbol/fron-end/html/pag-principal.html
@@ -12,7 +12,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Bienvenido</a>
+        <a class="navbar-brand" href="pag-principal.html">Bienvenido</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -27,16 +27,20 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">Inicio</a>
+              <a class="nav-link" href="pag-principal.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Acerca de</a>
+              <a
+                class="nav-link"
+                href="/GestionCampeonato/SistemaCampeonatoFutbol/fron-end/acerca-de.html"
+                >Acerca de</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Servicios</a>
+              <a class="nav-link" href="">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
+              <a class="nav-link" href="../creadores.html">Created by</a>
             </li>
           </ul>
         </div>
@@ -106,6 +110,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="../js/login.js"></script>
   </body>
 </html>
